<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.shulie.instrument.simulator</groupId>
        <artifactId>simulator</artifactId>
        <version>5.2.0</version>
    </parent>
    <artifactId>instrument-simulator-core</artifactId>
    <name>instrument-simulator-core ${simulator.major.version}</name>
    <properties>
        <!--suppress UnresolvedMavenProperty -->
        <build.time>${timestamp}</build.time>
    </properties>

    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <jdk.source>1.6</jdk.source>
                <jdk.target>1.6</jdk.target>
            </properties>
        </profile>
        <profile>
            <id>jdk9</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.0</version>
                        <configuration>
                            <source>${jdk.version}</source>
                            <target>${jdk.version}</target>
                            <encoding>UTF-8</encoding>
                            <showDeprecation>true</showDeprecation>
                            <fork>true</fork>
                            <debug>true</debug>
                            <optimize>true</optimize>
                            <compilerVersion>${jdk.version}</compilerVersion>
                            <executable>${jdk.home}/bin/javac</executable>
                            <compilerArgs>
                                <arg>--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.base/jdk.internal.module=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <jdk.version>1.9</jdk.version>
                <!--suppress UnresolvedMavenProperty -->
                <jdk.home>${env.JAVA_9_HOME}</jdk.home>
            </properties>
        </profile>
    </profiles>

    <build>
        <finalName>instrument-simulator-core-${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/version</include>
                    <include>**/logo</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <!-- 修改logback包名 -->
                            <pattern>ch.qos.logback</pattern>
                            <shadedPattern>com.shulie.instrument.simulator.dependencies.ch.qos.logback</shadedPattern>
                        </relocation>
<!--                        <relocation>-->
<!--                            &lt;!&ndash; 修改slf4j包名 &ndash;&gt;-->
<!--                            <pattern>org.slf4j</pattern>-->
<!--                            <shadedPattern>com.shulie.instrument.simulator.dependencies.org.slf4j</shadedPattern>-->
<!--                        </relocation>-->
                        <relocation>
                            <!-- 修改 guava 包名 -->
                            <pattern>com.google.common</pattern>
                            <shadedPattern>com.shulie.instrument.simulator.dependencies.com.google.common</shadedPattern>
                        </relocation>
                    </relocations>
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                    <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>com.shulie.instrument.simulator.core.CoreLauncher</mainClass>
                        </transformer>
                    </transformers>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-assembly-plugin</artifactId>-->
<!--                <version>2.6</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <goals>-->
<!--                            <goal>attached</goal>-->
<!--                        </goals>-->
<!--                        <phase>package</phase>-->
<!--                        <configuration>-->
<!--                            <descriptorRefs>-->
<!--                                <descriptorRef>jar-with-dependencies</descriptorRef>-->
<!--                            </descriptorRefs>-->
<!--                            <archive>-->
<!--                                <manifest>-->
<!--                                    <mainClass>com.shulie.instrument.simulator.core.CoreLauncher</mainClass>-->
<!--                                </manifest>-->
<!--                            </archive>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <forkMode>once</forkMode>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.4</version>
                <configuration>
                    <timestampFormat>yyyyMMddHHmmss</timestampFormat>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>create-timestamp</goal>
                        </goals>
                    </execution>
                </executions>
                <inherited>false</inherited>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.sun</groupId>
            <artifactId>tools</artifactId>
            <scope>system</scope>
            <systemPath>${jdk.8.home}/lib/tools.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>io.shulie.instrument.module</groupId>
            <artifactId>simulator-bootstrap-api</artifactId>
            <version>1.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.shulie.instrument.simulator</groupId>
            <artifactId>instrument-simulator-api</artifactId>
        </dependency>
        <dependency>
            <groupId>io.shulie.instrument.simulator</groupId>
            <artifactId>instrument-simulator-spi</artifactId>
        </dependency>
        <dependency>
            <groupId>io.shulie.instrument.simulator</groupId>
            <artifactId>instrument-simulator-messager</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.shulie.instrument.simulator</groupId>
            <artifactId>instrument-simulator-jdk-impl</artifactId>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
        </dependency>

        <!-- jetty server -->
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
        </dependency>

        <!-- asm -->
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-commons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-util</artifactId>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
        </dependency>
    </dependencies>
</project>
